[package]
name = "bareclad"
version = "0.1.4"
edition = "2024"
authors = ["Lars Rönnbäck <lars@bareclad.com>"]

[dependencies]
# chrono provides various data types for time
chrono = "0.4.38"
# bimap is a bidirectional hashmap, so lookups can be done both from left and right
bimap = "0.6.3"
# typemap holds one value per type of key, useful for Posit<V,T>
# pest is a parser used when parsing Traqula
pest = "2.7.11"
pest_derive = "2.7.11"
# config lets you read a separate config file 
config = "0.15.18"
# the "standard" regular expression package
regex = "1.10"
# anyhow provides easy custom error handling
anyhow = "1.0.86"
# since every posit is a thing in itself we can use bitsets to "join" them
# the "roaring bitmaps" seem to have the best ergonomics 
roaring = "0.11"
# we will use a fast hashing algo for hashmaps and hashsets where keys are not Things
seahash = "4.1.0"
# rusqlite for the persistence layer
rusqlite = { version = "0.37", features = ["chrono", "bundled"] }
# Connection pool for SQLite
# for decimal numbers of arbitrary size
bigdecimal = "0.4"
# for JSON data type
jsondata = "0.8.1"
# so regular expressions don't have to be recompiled 
lazy_static = "1.5"

# ---- THESE MAY BE USED LATER -----
#jql = "3.0.4"
#serde = "1.0.130"
#serde_json = "1.0.72"
#chumsky = "0.7"
# https://play.rust-lang.org/?version=nightly&mode=debug&edition=2021&gist=e93f05c877b6dda664a60cf8015e3d8d
#crossbeam = "0.8.1"

# logos is a lexer used when parsing Traqula
#logos = "0.12"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "benchmark"
harness = false